update: get data and project list;

--- a/templates/login.html
+++ b/templates/login.html
@@ -53,11 +53,11 @@
 			<form method="post" action="/login">
 				<div class="box">
 					<label>用户名：</label>
-					<input type="text" name="username" value="geetest"/>
+					<input type="text" name="username"/>
 				</div>
 				<div class="box">
 					<label>密　码：</label>
-					<input type="password" name="password" value="geetest"/>
+					<input type="password" name="password"/>
 				</div>
 				<div class="box" id="div_geetest_lib">
 				<div class="box">
