--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -1023,6 +1023,11 @@ gallery.html css
     border-color: #ff6c60;
 }
 
+.index-content {
+    position: absolute;
+    top: 50px;
+}
+
 /*.panel{background:#fff;}
 form .form-group:last-child{padding-bottom:0;}
 .passcode{position:absolute;right:0;top:0;height:32px;margin:1px;border-left:solid 1px #ddd;text-align:center;line-height:32px;border-radius:0 4px 4px 0;}
