--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,9 @@
                         href="/api/add_task/" class="am-close am-close-spin">~</a>
                 </button>
             </li>
+            <div class="user-info" style="color:#aeb2b7; margin: 10px 0 0 0;"> 欢迎您：xxx &nbsp;&nbsp;<a
+                href='/logout'>注 销</a>
+            </div>
 
         </ul>
     </div>
