--- a/templates/base.html
+++ b/templates/base.html
@@ -17,19 +17,19 @@
         <ul>
             <li>
                 <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
-                        onclick="location='/api/index/'">首页
-                    <a href="/api/index/" class="am-close am-close-spin">~</a></button>
+                        onclick="location='/'">首页
+                    <a href="/" class="am-close am-close-spin">~</a></button>
             </li>
             <li>
                 <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
-                        onclick="location='/api/project_list/1/'">项目列表<a
-                        href="/api/project_list/1/" class="am-close am-close-spin">~</a>
+                        onclick="location='/project/list'">项目列表<a
+                        href="/project/list" class="am-close am-close-spin">~</a>
                 </button>
             </li>
             <li>
                 <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
-                        onclick="location='/api/module_list/1/'">测试报告<a
-                        href="/api/module_list/1/" class="am-close am-close-spin">~</a>
+                        onclick="location='/data/list'">测试报告<a
+                        href="/data/list" class="am-close am-close-spin">~</a>
                 </button>
             </li>
             <li>
