--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html class="no-js" lang="zh-CN">
 <head>
-    <title>{% block title %}Default title{% end %}</title>
+    <title>{% block title %}Default title{% endblock %}</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap-fileinput/4.4.8/css/fileinput.min.css"/>
     <link rel="stylesheet" href="http://cdn.amazeui.org/amazeui/2.7.2/css/amazeui.min.css"/>
     <link rel="stylesheet" href="/static/css/admin.css">
     <link rel="stylesheet" href="/static/css/common.css">
+    <script src="https://cdn.staticfile.org/jquery/3.3.1/jquery.min.js"></script>
     <script src="/static/js/app.js"></script>
     <script src="/static/js/commons.js"></script>
+    <script src="/static/js/project.js"></script>
+    <script src="/static/js/vue.js"></script>
 </head>
 <body class="modal-open">
 <div class="am-cf admin-main">
@@ -22,8 +25,8 @@
             </li>
             <li>
                 <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
-                        onclick="location='/project/list'">项目列表<a
-                        href="/project/list" class="am-close am-close-spin">~</a>
+                        onclick="location='/project'">项目列表<a
+                        href="/project" class="am-close am-close-spin">~</a>
                 </button>
             </li>
             <li>
@@ -46,66 +49,14 @@
     </div>
     <div class="index-content">
         <p>
-            {% block item %}
-                {{ escape(item) }}
-            {% end %}
+            {% block content %}
+                {{ content }}
+            {% endblock %}
         </p>
     </div>
-    <script type="text/javascript">
-        jQuery(".sideMenu").slide({
-            titCell: "h3", //鼠标触发对象
-            targetCell: "ul", //与titCell一一对应，第n个titCell控制第n个targetCell的显示隐藏
-            effect: "slideDown", //targetCell下拉效果
-            delayTime: 300, //效果时间
-            triggerTime: 150, //鼠标延迟触发时间（默认150）
-            defaultPlay: true,//默认是否执行效果（默认true）
-            returnDefault: false //鼠标从.sideMen移走后返回默认状态（默认false）
-        });
-
-        function initFileInput(ctrlName) {
-            var control = $('#' + ctrlName);
-            control.fileinput({
-                resizeImage: true,
-                resizePreference: 'width',
-                uploadAsync: false,                             //采用同步上传
-                language: 'zh', //设置语言
-                uploadUrl: '/api/upload_file/',
-                allowedFileExtensions: ['yml', 'yaml', 'json'],//接收的文件后缀
-                showUpload: true, //是否显示上传按钮
-                showRemove: false,
-                showCaption: true,//是否显示标题
-                browseClass: "btn btn-primary", //按钮样式
-                previewFileIcon: "<i class='glyphicon glyphicon-king'></i>",
-                maxFileCount: 10,
-                msgFilesTooMany: "选择文件超过了最大数量",
-                maxFileSize: 2000,
-                uploadExtraData:
-                    function () {     //上传时要传输的其他参数
-                        project_name = $('#project option:selected').val();//选中的文本
-                        module_name = $('#upload_belong_module_id option:selected').val();//选中的文本
-                        return {"project": project_name, "module": module_name};
-                    },
-                showClose: false,//显示右上角X关闭
-                overwriteInitial: false, //是否显示预览
-                dropZoneEnabled: false,//是否显示拖拽区域
-            });
-            control.on('fileerror', function (event, data, msg) {
-                myAlert(msg)
-            });
-            control.on("filebatchuploadsuccess", function (event, data) {
-                var obj = data.response;
-                $("#bulk_uploadcase").trigger('click');
-                if (obj.status.indexOf('/api/') !== -1) {
-                    window.location.href = obj.status;
-                } else {
-                    myAlert(obj.status);
-                }
-            });
-        }
-
-        initFileInput("uploadfile");
-    </script>
 </div>
-
+{% block sctipt %}
+{{ script }}
+{% endblock %}
 </body>
 </html>
