--- a/templates/project-with-id.html
+++ b/templates/project-with-id.html
@@ -19,9 +19,9 @@
 <script>
 
 $(function(){
-    $.get('/api/project',function(res){
+    $.get('/test-result?pro_id={{ id }}',function(res){
         if(!res){return alert('异常')}
-        $('#app-proj').html( res.data.map(x=>`<a href="/project/${x._id}">${x._id}</a>`).join('<br />'))
+        $('#app-proj').html( res.data.results.map(x=>`<a href="/test-result?id=${x._id.$oid}">${x._id.$oid}</a>`).join('<br />'))
 
     })
 });
