--- a/templates/project.html
+++ b/templates/project.html
@@ -6,11 +6,98 @@
 <div>
     <p>
         {% block content %}
-
-    <div id="app-proj">
-
-
+        {% raw %}
+    <div class="projects-list">
+        <div class="boxed-group project-card" data-key="gt-server" v-for="x in list">
+            <div class="boxed-group-header clearfix">
+                <div class="project-card-header">
+                    <h2 class="project-card-name"><a :href="'/project/'+x.project">{{x.project}}</a></h2>
+                    <div class="project-card-measure project-card-quality-gate spacer-left">
+                        <div class="project-card-measure-inner"><span class="level level-OK level-small">Passed</span>
+                        </div>
+                    </div>
+                    <!--version-->
+                    <div class="project-card-header-right">
+                        <div class="outline-badge spacer-left">{{x.version}}</div>
+                    </div>
+                </div>
+                <div class="project-card-dates note text-right">
+                    <span class="big-spacer-left">Last test: July 25, 2018, 4:13 PM</span>
+                </div>
+            </div>
+            <div class="boxed-group-inner">
+                <div class="project-card-measures">
+                    <div class="project-card-measure" data-key="passed_rating">
+                        <div class="project-card-measure-inner">
+                            <div class="project-card-measure-number"><span class="spacer-right">0</span><span
+                                    class="rating rating-A">A</span></div>
+                            <div class="project-card-measure-label-with-icon">
+                                <svg class="little-spacer-right vertical-bottom" width="16" height="16" viewBox="0 0 16 16" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"><path d="M11 9h1.3l.5.8.8-.5-.8-1.3H11v-.3l2-2.3V3h-1v2l-1 1.2V5c-.1-.8-.7-1.5-1.4-1.9L11 1.8l-.7-.7-1.8 1.6-1.8-1.6-.7.7 1.5 1.3C6.7 3.5 6.1 4.2 6 5v1.1L5 5V3H4v2.3l2 2.3V8H4.2l-.7 1.2.8.5.4-.7H6v.3l-2 1.9V14h1v-2.4l1-1C6 12 7.1 13 8.4 13h.8c.7 0 1.4-.3 1.8-.9.3-.4.3-.9.2-1.4l.9.9V14h1v-2.8l-2-1.9V9zm-2 2H8V6h1v5z" style="fill: currentcolor;"></path></svg>
+                                Pass
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-card-measure" data-key="failed_rating">
+                        <div class="project-card-measure-inner">
+                            <div class="project-card-measure-number"><span class="spacer-right">0</span><span
+                                    class="rating rating-A">A</span></div>
+                            <div class="project-card-measure-label-with-icon">
+                                <svg class="little-spacer-right vertical-bottom" width="16" height="16" viewBox="0 0 16 16" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"><path d="M11 9h1.3l.5.8.8-.5-.8-1.3H11v-.3l2-2.3V3h-1v2l-1 1.2V5c-.1-.8-.7-1.5-1.4-1.9L11 1.8l-.7-.7-1.8 1.6-1.8-1.6-.7.7 1.5 1.3C6.7 3.5 6.1 4.2 6 5v1.1L5 5V3H4v2.3l2 2.3V8H4.2l-.7 1.2.8.5.4-.7H6v.3l-2 1.9V14h1v-2.4l1-1C6 12 7.1 13 8.4 13h.8c.7 0 1.4-.3 1.8-.9.3-.4.3-.9.2-1.4l.9.9V14h1v-2.8l-2-1.9V9zm-2 2H8V6h1v5z" style="fill: currentcolor;"></path></svg>
+                                Fail
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-card-measure" data-key="error_rating">
+                        <div class="project-card-measure-inner">
+                            <div class="project-card-measure-number"><span class="spacer-right">0</span><span
+                                    class="rating rating-A">A</span></div>
+                            <div class="project-card-measure-label-with-icon">
+                                <svg class="little-spacer-right vertical-bottom" width="16" height="16" viewBox="0 0 16 16" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"><path d="M10.8 5H6V3.9a2.28 2.28 0 0 1 2-2.5 2.22 2.22 0 0 1 1.8 1.2.48.48 0 0 0 .7.2.48.48 0 0 0 .2-.7A3 3 0 0 0 8 .4a3.34 3.34 0 0 0-3 3.5v1.2a2.16 2.16 0 0 0-2 2.1v4.4a2.22 2.22 0 0 0 2.2 2.2h5.6a2.22 2.22 0 0 0 2.2-2.2V7.2A2.22 2.22 0 0 0 10.8 5zm-2.2 5.5v1.2H7.4v-1.2a1.66 1.66 0 0 1-1.1-1.6A1.75 1.75 0 0 1 8 7.2a1.71 1.71 0 0 1 .6 3.3z" style="fill: currentcolor;"></path></svg>
+                                Error
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-card-measure" data-key="skipped_rating">
+                        <div class="project-card-measure-inner">
+                            <div class="project-card-measure-number"><span class="spacer-right">60</span><span
+                                    class="rating rating-A">A</span></div>
+                            <div class="project-card-measure-label-with-icon">
+                                <svg class="little-spacer-right vertical-bottom" width="16" height="16"
+                                     viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M8 2C4.7 2 2 4.7 2 8s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6zm-.5 5.5h.9v.9h-.9v-.9zm-3.8.2c-.1 0-.2-.1-.2-.2 0-.4.1-1.2.6-2S5.3 4.2 5.6 4c.2 0 .3 0 .3.1l1.3 2.3c0 .1 0 .2-.1.2-.1.2-.2.3-.3.5-.1.2-.2.4-.2.5 0 .1-.1.2-.2.2l-2.7-.1zM9.9 12c-.3.2-1.1.5-2 .5-.9 0-1.7-.3-2-.5-.1 0-.1-.2-.1-.3l1.3-2.3c0-.1.1-.1.2-.1.2.1.3.1.5.1s.4 0 .5-.1c.1 0 .2 0 .2.1l1.3 2.3c.2.2.2.3.1.3zm2.5-4.1L9.7 8c-.1 0-.2-.1-.2-.2 0-.2-.1-.4-.2-.5 0-.1-.2-.3-.3-.4-.1 0-.1-.1-.1-.2l1.3-2.3c.1-.1.2-.1.3-.1.3.2 1 .7 1.5 1.5s.6 1.6.6 2c0 0-.1.1-.2.1z"
+                                          style="fill: currentcolor;"></path>
+                                </svg>
+                                Skipped
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-card-measure" data-key="percentage">
+                        <div class="project-card-measure-inner">
+                            <div class="project-card-measure-number"><span class="spacer-right"><svg class="donut-chart"
+                                                                                                     height="24"
+                                                                                                     width="24"><g
+                                    transform="translate(0, 0)"><g transform="translate(12, 12)"><path
+                                    d="M7.347880794884119e-16,-12A12,12,0,1,1,-0.2261812765848993,11.997868228569708L-0.1696359574386745,8.99840117142728A9,9,0,1,0,5.51091059616309e-16,-9Z"
+                                    style="fill: rgb(0, 170, 0);"></path><path
+                                    d="M-0.2261812765848993,11.997868228569708A12,12,0,0,1,-2.204364238465236e-15,-12L-1.6532731788489267e-15,-9A9,9,0,0,0,-0.1696359574386745,8.99840117142728Z"
+                                    style="fill: rgb(212, 51, 63);"></path></g></g></svg></span><span>50.3%</span></div>
+                            <div class="project-card-measure-label">Percentage</div>
+                        </div>
+                    </div>
+                    <div class="project-card-measure project-card-ncloc" data-key="ncloc">
+                        <div class="project-card-measure-inner pull-right">
+                            <div class="project-card-measure-number"><span>6.9k</span><span class="spacer-left"><div
+                                    class="size-rating">S</div></span></div>
+                            <div class="project-card-measure-label">
+                                <div class="project-card-languages"><span>Python</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    {% endraw %}
     {% endblock %}
     </p>
 </div>
@@ -19,12 +106,17 @@
 <script>
 
 $(function(){
-    $.get('/api/project',function(res){
+    $.get('/api/test-result/latest',function(res){
         if(!res){return alert('异常')}
-        $('#app-proj').html( res.data.map(x=>`<a href="/project/${x._id}">${x._id}</a>`).join('<br />'))
-
+         app.list=res.data
     })
 });
+var app=new Vue({
+data:{
+    list:[]
+}});
+app.$mount('.projects-list')
+
 
 </script>
 {% endblock %}
