添加曲线图

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
     <script src="/static/js/commons.js"></script>
     <script src="/static/js/project.js"></script>
     <script src="/static/js/vue.js"></script>
+    <script src="/static/js/echarts.js"></script>
+    <script src="/static/js/page/proj.js"></script>
 </head>
 <body class="modal-open">
 <div class="am-cf admin-main">
