update: show details on project list page;

--- a/templates/project.html
+++ b/templates/project.html
@@ -31,7 +31,7 @@
                 <div class="project-card-measures">
                     <div class="project-card-measure" data-key="passed_rating">
                         <div class="project-card-measure-inner">
-                            <div class="project-card-measure-number"><span class="spacer-right">0</span><span
+                            <div class="project-card-measure-number"><span class="spacer-right">{{x.success}}</span><span
                                     class="rating rating-A">A</span></div>
                             <div class="project-card-measure-label-with-icon">
                                 <svg class="little-spacer-right vertical-bottom" width="16" height="16" viewBox="0 0 16 16" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"><path d="M11 9h1.3l.5.8.8-.5-.8-1.3H11v-.3l2-2.3V3h-1v2l-1 1.2V5c-.1-.8-.7-1.5-1.4-1.9L11 1.8l-.7-.7-1.8 1.6-1.8-1.6-.7.7 1.5 1.3C6.7 3.5 6.1 4.2 6 5v1.1L5 5V3H4v2.3l2 2.3V8H4.2l-.7 1.2.8.5.4-.7H6v.3l-2 1.9V14h1v-2.4l1-1C6 12 7.1 13 8.4 13h.8c.7 0 1.4-.3 1.8-.9.3-.4.3-.9.2-1.4l.9.9V14h1v-2.8l-2-1.9V9zm-2 2H8V6h1v5z" style="fill: currentcolor;"></path></svg>
@@ -41,8 +41,10 @@
                     </div>
                     <div class="project-card-measure" data-key="failed_rating">
                         <div class="project-card-measure-inner">
-                            <div class="project-card-measure-number"><span class="spacer-right">0</span><span
-                                    class="rating rating-A">A</span></div>
+                            <div class="project-card-measure-number"><span class="spacer-right">{{x.failures}}</span>
+                                <span class="rating rating-A" v-if="x.failures==0">A</span>
+                                <span class="rating rating-C" v-else>C</span>
+                            </div>
                             <div class="project-card-measure-label-with-icon">
                                 <svg class="little-spacer-right vertical-bottom" width="16" height="16" viewBox="0 0 16 16" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"><path d="M11 9h1.3l.5.8.8-.5-.8-1.3H11v-.3l2-2.3V3h-1v2l-1 1.2V5c-.1-.8-.7-1.5-1.4-1.9L11 1.8l-.7-.7-1.8 1.6-1.8-1.6-.7.7 1.5 1.3C6.7 3.5 6.1 4.2 6 5v1.1L5 5V3H4v2.3l2 2.3V8H4.2l-.7 1.2.8.5.4-.7H6v.3l-2 1.9V14h1v-2.4l1-1C6 12 7.1 13 8.4 13h.8c.7 0 1.4-.3 1.8-.9.3-.4.3-.9.2-1.4l.9.9V14h1v-2.8l-2-1.9V9zm-2 2H8V6h1v5z" style="fill: currentcolor;"></path></svg>
                                 Fail
@@ -51,8 +53,10 @@
                     </div>
                     <div class="project-card-measure" data-key="error_rating">
                         <div class="project-card-measure-inner">
-                            <div class="project-card-measure-number"><span class="spacer-right">0</span><span
-                                    class="rating rating-A">A</span></div>
+                            <div class="project-card-measure-number"><span class="spacer-right">{{x.errors}}</span>
+                                <span class="rating rating-A" v-if="x.errors==0">A</span>
+                                <span class="rating rating-D" v-else>D</span>
+                            </div>
                             <div class="project-card-measure-label-with-icon">
                                 <svg class="little-spacer-right vertical-bottom" width="16" height="16" viewBox="0 0 16 16" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"><path d="M10.8 5H6V3.9a2.28 2.28 0 0 1 2-2.5 2.22 2.22 0 0 1 1.8 1.2.48.48 0 0 0 .7.2.48.48 0 0 0 .2-.7A3 3 0 0 0 8 .4a3.34 3.34 0 0 0-3 3.5v1.2a2.16 2.16 0 0 0-2 2.1v4.4a2.22 2.22 0 0 0 2.2 2.2h5.6a2.22 2.22 0 0 0 2.2-2.2V7.2A2.22 2.22 0 0 0 10.8 5zm-2.2 5.5v1.2H7.4v-1.2a1.66 1.66 0 0 1-1.1-1.6A1.75 1.75 0 0 1 8 7.2a1.71 1.71 0 0 1 .6 3.3z" style="fill: currentcolor;"></path></svg>
                                 Error
@@ -61,7 +65,7 @@
                     </div>
                     <div class="project-card-measure" data-key="skipped_rating">
                         <div class="project-card-measure-inner">
-                            <div class="project-card-measure-number"><span class="spacer-right">60</span><span
+                            <div class="project-card-measure-number"><span class="spacer-right">{{x.skipped}}</span><span
                                     class="rating rating-A">A</span></div>
                             <div class="project-card-measure-label-with-icon">
                                 <svg class="little-spacer-right vertical-bottom" width="16" height="16"
