--- a/templates/project-with-id.html
+++ b/templates/project-with-id.html
@@ -67,23 +67,16 @@
             <div class="project-activity-layout-page-main">
                 <div class="project-activity-layout-page-main-inner boxed-group boxed-group-inner">
                     <header class="page-header">
-                        <div class="Select pull-left input-medium Select--single has-value">
-                            <div class="Select-control">
-                                <span class="Select-multi-value-wrapper" id="react-select-17--value">
-                                    <div class="Select-value">
-                                        <span class="Select-value-label" role="option" aria-selected="true" id="react-select-17--value-item">Issues</span>
-                                    </div>
-                                    <div role="combobox" aria-expanded="false" aria-owns="" aria-activedescendant="react-select-17--value" class="Select-input"
-                                        tabindex="0" aria-readonly="false" style="border: 0px; width: 1px; display: inline-block;"></div>
-                                </span>
-                                <span class="Select-arrow-zone">
-                                    <span class="Select-arrow"></span>
-                                </span>
+                        <div class="Select pull-left input-medium has-value">
+                            <div>
+                                <select v-model="tag" @change="changeTag">
+                                    <option v-for="x in tags" :value="x">{{x||'-- 全部 --'}}</option>
+                                </select>
                             </div>
-                        </div>
                     </header>
                     <div class="project-activity-graphs" style="height: 600px;">
 
+                    </div>
                     </div>
 
                 </div>
@@ -95,46 +88,67 @@
 
     {% block sctipt %}
     <script>
-
-        $(function () {
-            $.get('/api/test-result?pro_id={{ id }}', function (res) {
-                if (!res) { return alert('异常') }
-                var RawData = JSON.parse(JSON.stringify(res));
-                var datetime = new Date(res.data.results[0].create_time.$date);
-                var max_date = datetime.getFullYear().toString() + "-" + (datetime.getMonth() + 1).toString() + "-" + datetime.getDate().toString();
-                var data_group = {
-                    results: [res.data.results[0]],
-                    date: max_date
-                }
-                for (var i = 1, len = res.data.results.length; i < len; i++) {
-                    var item = res.data.results[i];
-                    var datetime = new Date(item.create_time.$date);
-                    var date = datetime.getFullYear().toString() + "-" + (datetime.getMonth() + 1).toString() + "-" + datetime.getDate().toString();
-                    if (date < data_group['date']) {
-                        app.list.push(data_group);
-                        var data_group = {
-                            results: [item],
-                            date: date
-                        }
-                        if (i == len - 1) {
-                            app.list.push(data_group);
-                            break;
-                        }
-                        continue;
-                    }
-                    data_group.results.push(item);
-                }
-
-                showChart(document.querySelector('.project-activity-graphs'),
-                    [['success', '成功'], ['failures', '失败'], ['errors', '错误']]
-                        .reduce((a, b) => (a[b[1]] = RawData.data.results.map(x => x[b[0]]), a), {}))
-
-            })
-        });
         var app = new Vue({
             data: {
+                pro_id: '{{ id }}',
                 list: [],
+                tags: [''],
+                tag: ''
                 //dates:[]
+            },
+            methods: {
+                changeTag() {
+                    this.getResult()
+                },
+                getResult() {
+                    var vm = this, pro_id = vm.pro_id, tag = vm.tag,
+                        qs = ['pro_id=' + pro_id];
+                    if (tag) { qs.push('tag=' + tag) }
+                    $.get('/api/test-result?' + qs.join('&'), function (res) {
+                        if (!res) { return alert('异常') }
+                        var RawData = JSON.parse(JSON.stringify(res));
+                        var datetime = new Date(res.data.results[0].create_time.$date);
+                        var max_date = datetime.getFullYear().toString() + "-" + (datetime.getMonth() + 1).toString() + "-" + datetime.getDate().toString();
+                        var data_group = {
+                            results: [res.data.results[0]],
+                            date: max_date
+                        }
+                        var list = [];
+                        for (var i = 1, len = res.data.results.length; i < len; i++) {
+                            var item = res.data.results[i];
+                            var datetime = new Date(item.create_time.$date);
+                            var date = datetime.getFullYear().toString() + "-" + (datetime.getMonth() + 1).toString() + "-" + datetime.getDate().toString();
+                            if (date < data_group['date']) {
+                                list.push(data_group);
+                                var data_group = {
+                                    results: [item],
+                                    date: date
+                                }
+                                if (i == len - 1) {
+                                    list.push(data_group);
+                                    break;
+                                }
+                                continue;
+                            }
+                            data_group.results.push(item);
+                        }
+                        vm.list = list;
+                        showChart(document.querySelector('.project-activity-graphs'),
+                            [['success', '成功'], ['failures', '失败'], ['errors', '错误']]
+                                .reduce((a, b) => (a[b[1]] = RawData.data.results.map(x => x[b[0]]), a), {}))
+                    });
+                },
+                getTags() {
+                    var vm = this, pro_id = vm.pro_id;
+                    $.get('/api/project/get-tags?id=' + pro_id, function (res) {
+                        if (!res || !res.data) { return alert('异常') }
+                        vm.tags = vm.tags.concat(res.data)
+                    })
+                }
+            },
+            created: function () {
+                this.getTags()
+                this.getResult()
             }
         });
         app.$mount('.project-activity-page')
