update: use local js/css instead of cdn;

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,18 +3,17 @@
 <head>
     <title>{% block title %}Default title{% endblock %}</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap-fileinput/4.4.8/css/fileinput.min.css"/>
-    <link rel="stylesheet" href="http://cdn.amazeui.org/amazeui/2.7.2/css/amazeui.min.css"/>
+    <link rel="stylesheet" href="/static/css/opensource/fileinput.min.css"/>
+    <link rel="stylesheet" href="/static/css/opensource/amazeui.min.css">
     <link rel="stylesheet" href="/static/css/admin.css">
     <link rel="stylesheet" href="/static/css/common.css">
     <link rel="stylesheet" href="/static/css/project.css">
-    <script src="https://cdn.staticfile.org/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/static/js/opensource/jquery.min.js"></script>
     <script src="/static/js/app.js"></script>
     <script src="/static/js/commons.js"></script>
     <script src="/static/js/project.js"></script>
-    <script src="/static/js/vue.js"></script>
-    <script src="/static/js/echarts.js"></script>
-    <script src="/static/js/page/proj.js"></script>
+    <script src="/static/js/opensource/vue.js"></script>
+    <script src="/static/js/opensource/echarts.js"></script>
 </head>
 <body class="modal-open">
 <div class="am-cf admin-main">
