update: add detail grid.

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     <script src="/static/js/project.js"></script>
     <script src="/static/js/opensource/vue.js"></script>
     <script src="/static/js/opensource/echarts.js"></script>
+    {% block static %}{% endblock %}
 </head>
 <body class="modal-open">
 <div class="am-cf admin-main">
