--- a/static/css/project.css
+++ b/static/css/project.css
@@ -73,7 +73,9 @@ body,html{color:#444}body{font-family:Helvetica Neue,Segoe UI,Helvetica,Arial,sa
 
 /*# sourceMappingURL=277.f14668ba.chunk.css.map*/
 
-.project-activity-page{min-height:600px;height:calc(100vh - 250px)}.project-activity-page-side-outer{position:relative;width:400px;margin-bottom:0;display:flex;flex-direction:row;align-items:stretch;}.project-activity-page-side-outer>.boxed-group-inner{padding-left:12px;padding-right:15px}.project-activity-layout-page-main{flex-grow:1;min-width:640px;padding-left:20px;display:flex}
+.project-activity-page{min-height:600px;height:calc(100vh - 250px)}
+.project-activity-page-side-outer{position:relative;width:400px;margin-bottom:0;display:flex;flex-direction:row;align-items:stretch;}
+.project-activity-page-side-outer>.boxed-group-inner{padding-left:12px;padding-right:15px}.project-activity-layout-page-main{flex-grow:1;min-width:640px;padding-left:20px;display:flex}
 
 .project-activity-layout-page-main-inner{
     max-width:880px;
@@ -102,6 +104,10 @@ body,html{color:#444}body{font-family:Helvetica Neue,Segoe UI,Helvetica,Arial,sa
     margin-left:8px;
 }
 
+.project-list-box{position:relative;width:400px;margin-bottom:0;display:flex;flex-direction:row;align-items:stretch;}
+
+.project-list-box>.project-list-box-inner{padding-left:12px;padding-right:15px}
+
 .project-list-time{
     float:left;
     width:54px;
@@ -125,7 +131,7 @@ body,html{color:#444}body{font-family:Helvetica Neue,Segoe UI,Helvetica,Arial,sa
     color:#4b9fd5;
 }
 
-.project-traceback-list{max-width:450px;height:600px;overflow-y:auto;}
+.project-traceback-list{padding-top:96px}
 
 .project-detail{
     margin-bottom: 0px;
