update: extrac css of collapse from bootstrap.

--- a/templates/job.html
+++ b/templates/job.html
@@ -2,7 +2,7 @@
 
     {% block script %}
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/job.css">
     {% endblock %}
 
 <body>
